# lua---camera

./: CMakeLists.txt  FindTorch.cmake  README.txt  camera-1.0-0.rockspec  camera-1.0-1.rockspec  init.lua  init.lua.in  test-multi.lua  test.lua
camiface/: CMakeLists.txt  camiface.c  init.lua
examples/: test-fps.lua  test-hex.lua  test-multi.lua  test-one.lua  test-two.lua
libcamiface/: 99-pt-grey-firefly-mv-usb.rules  CMakeLists.txt  LICENSE.txt  README.rst  TODO.rst  installer_readme.html  libcamiface.pc.in  prosilica_help.py
libcamiface/CMakeModules/: FindCarbon.cmake  FindCoreFoundation.cmake  FindCoreServices.cmake  FindDC1394.cmake  FindFlyCapture.cmake  FindGLEW.cmake  FindIOKit.cmake  FindProsilicaGigE.cmake
libcamiface/demo/: CMakeLists.txt  frame_grabber.c  liveview-glut.c  multi-cam-autoset.c  multi-cam.c  save_fmf.c  simple.c
libcamiface/include/: cam_iface.h
libcamiface/src/: CMakeLists.txt  cam_iface_common.c  cam_iface_dc1394.c  cam_iface_dc1394.h  cam_iface_internal.h  cam_iface_mega.c  cam_iface_pgr_flycap.cpp  cam_iface_pgr_flycap.h  cam_iface_prosilica_gige.cpp  cam_iface_prosilica_gige.h  cam_iface_quicktime.c  cam_iface_quicktime.h  cam_iface_static_functions.h  cam_iface_unity.c  mega_backend_info.h
macos/: CMakeLists.txt  camera.h  camera.m  init.lua
opencv/: CMakeLists.txt  init.lua  opencv.c  opencv.h
video4linux/: CMakeLists.txt  init.lua  v4l.c
