
FIND_LIBRARY(COCOA_LIBRARY Cocoa)
FIND_LIBRARY(CORE_LIBRARY CoreFoundation)
FIND_LIBRARY(QTKIT_LIBRARY QTKit)
FIND_LIBRARY(QUARTZ_LIBRARY Quartz)

MARK_AS_ADVANCED (COCOA_LIBRARY CORE_LIBRARY QTKIT_LIBRARY QUARTZ_LIBRARY)
SET(EXTRA_LIBS ${COCOA_LIBRARY} ${CORE_LIBRARY} ${QTKIT_LIBRARY} ${QUARTZ_LIBRARY})

include_directories (${TORCH_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/macos)
add_library (cammacos SHARED camera.m)
SET_TARGET_PROPERTIES(cammacos PROPERTIES COMPILE_FLAGS "-std=c99")
target_link_libraries (cammacos ${TORCH_LIBRARIES} ${EXTRA_LIBS})

install_targets (/lib cammacos)
