
FIND_LIBRARY(COCOA_LIBRARY Cocoa)
FIND_LIBRARY(CORE_LIBRARY CoreFoundation)
FIND_LIBRARY(QTKIT_LIBRARY QTKit)
FIND_LIBRARY(QUARTZ_LIBRARY Quartz)

MARK_AS_ADVANCED(COCOA_LIBRARY CORE_LIBRARY QTKIT_LIBRARY QUARTZ_LIBRARY)
SET(EXTRA_LIBS ${COCOA_LIBRARY} ${CORE_LIBRARY} ${QTKIT_LIBRARY} ${QUARTZ_LIBRARY})

INCLUDE_DIRECTORIES(${TORCH_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/macos)

SET(src camera.m)
SET(luasrc init.lua)
ADD_TORCH_PACKAGE(cammacos "${src}" "${luasrc}" "Image Processing")
SET_TARGET_PROPERTIES(cammacos PROPERTIES COMPILE_FLAGS "-std=c99")
TARGET_LINK_LIBRARIES(cammacos luaT TH ${EXTRA_LIBS})
